--- a/templates/main/sobre.html
+++ b/templates/main/sobre.html
@@ -25,88 +25,146 @@ Clipgen.ai{% endblock %} {% block content %}
     <div id="carrusel-track">
       <div class="carrusel-container animate__animated">
         <div class="carrusel-img simple-one">
-          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej1.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img simple-two">
-          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej2.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img double">
           <img
             src="{% static 'img/carrusel/ej4-100.jpg' %}"
             alt="Carrusel photo"
+            loading="lazy"
           />
         </div>
         <div class="carrusel-img simple-three">
-          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej3.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img simple-four">
           <img
             src="{% static 'img/carrusel/ej6-100.jpg' %}"
             alt="Carrusel photo"
+            loading="lazy"
           />
         </div>
         <div class="carrusel-img double-two">
-          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
-        </div>
-      </div>
-      
-      <div class="carrusel-container animate__animated">
-        <div class="carrusel-img simple-one">
-          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
-        </div>
-        <div class="carrusel-img simple-two">
-          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
-        </div>
-        <div class="carrusel-img double">
           <img
-            src="{% static 'img/carrusel/ej4-100.jpg' %}"
+            src="{% static 'img/carrusel/ej5.jpg' %}"
             alt="Carrusel photo"
+            loading="lazy"
           />
-        </div>
-        <div class="carrusel-img simple-three">
-          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
-        </div>
-        <div class="carrusel-img simple-four">
-          <img
-            src="{% static 'img/carrusel/ej6-100.jpg' %}"
-            alt="Carrusel photo"
-          />
-        </div>
-        <div class="carrusel-img double-two">
-          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
         </div>
       </div>
 
       <div class="carrusel-container animate__animated">
         <div class="carrusel-img simple-one">
-          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej1.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img simple-two">
-          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej2.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img double">
           <img
             src="{% static 'img/carrusel/ej4-100.jpg' %}"
             alt="Carrusel photo"
+            loading="lazy"
           />
         </div>
         <div class="carrusel-img simple-three">
-          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej3.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
         <div class="carrusel-img simple-four">
           <img
             src="{% static 'img/carrusel/ej6-100.jpg' %}"
             alt="Carrusel photo"
+            loading="lazy"
           />
         </div>
         <div class="carrusel-img double-two">
-          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
+          <img
+            src="{% static 'img/carrusel/ej5.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+      </div>
+
+      <div class="carrusel-container animate__animated">
+        <div class="carrusel-img simple-one">
+          <img
+            src="{% static 'img/carrusel/ej1.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+        <div class="carrusel-img simple-two">
+          <img
+            src="{% static 'img/carrusel/ej2.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+        <div class="carrusel-img double">
+          <img
+            src="{% static 'img/carrusel/ej4-100.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+        <div class="carrusel-img simple-three">
+          <img
+            src="{% static 'img/carrusel/ej3.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+        <div class="carrusel-img simple-four">
+          <img
+            src="{% static 'img/carrusel/ej6-100.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
+        </div>
+        <div class="carrusel-img double-two">
+          <img
+            src="{% static 'img/carrusel/ej5.jpg' %}"
+            alt="Carrusel photo"
+            loading="lazy"
+          />
         </div>
       </div>
     </div>
     <div class="carrusel-buttons-container">
-      <span id="btn-backward-container" class="button-carrusel-container"><i class="fa-solid fa-arrow-left"></i></span>
-      <span id="btn-next-container" class="button-carrusel-container"><i class="fa-solid fa-arrow-right"></i></span>
+      <span id="btn-backward-container" class="button-carrusel-container"
+        ><i class="fa-solid fa-arrow-left"></i
+      ></span>
+      <span id="btn-next-container" class="button-carrusel-container"
+        ><i class="fa-solid fa-arrow-right"></i
+      ></span>
     </div>
   </section>
   <!-- CARRUSEL PHOTOS SECTION -->
