--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -8,8 +8,8 @@
   --greenFull1: #9df01a;
   --greenFull2: #70e000;
   --greenFull3: #38b000;
-  --blackPanel: rgb(22, 22, 22);
-  --panel2: rgb(140, 140, 140);
+  --blackPanel: rgb(37, 37, 37);
+  --panel2: rgb(75, 75, 75);
   --blueBtns: #0d64de;
   --blueBtns2: #3e8fff;
   --inputs: rgb(29, 29, 29);
@@ -29,6 +29,10 @@
   a {
     text-decoration: none;
     cursor: pointer;
+  }
+
+  a:visited {
+    color: white;
   }
 
   section {
@@ -70,11 +74,6 @@ body {
   padding-top: 30px;
   overflow-y: auto;
   font-family: var(--second);
-
-  ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
-  }
 }
 .container {
   width: 100%;
@@ -707,29 +706,36 @@ button:hover #clip {
   transform: translate(-50%, -50%);
   z-index: 1050;
   display: block;
-  padding: 15px;
-  border-radius: 8px;
+  padding: 35px;
+  border-radius: 6px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
   width: 80%;
   max-width: 300px;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
+  font-family: "Kanit";
   opacity: 0;
 }
 
 .alert-danger {
-  background-color: #dc3545;
   color: #ffffff;
+  border: 5px solid red;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(158, 10, 10, 0.38);
 }
 
 .alert-success {
-  background-color: #28a745;
   color: #ffffff;
+  border: 5px solid var(--greenFull3);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgb(10 158 17 / 38%);
 }
 
-.alert.show {
-  display: block;
-  animation: fadeIn 0.5s forwards, fadeOut 0.5s forwards 2.5s; /* Aparecer y desaparecer */
+.alert {
+  animation: fadeIn 0.5s forwards, fadeOut 0.5s forwards 2.5s;
+  /* Aparecer y desaparecer */
 }
 
 @keyframes fadeIn {
@@ -838,6 +844,7 @@ button:hover #clip {
   border-radius: 2px;
   transition: width 0.3s ease;
 }
+
 @keyframes vaiven {
   0% {
     background-position: 100% 50%;
